tools/test/test2.pcc
//
//  Testing the ability of the preprocessor to locate
//  regular expression syntax errors
//

#include <iostream.h>
int f()
{
   matchscan (cin) {
      case /[0-9]+/:                 return 0;
      case /[a-zA-Z_][a-zA-Z0-9_]*/: return 1;
      case /[0-9 +/:                 return 2;  // error
   }
   matchscan (cin) {
      case /?abcde/:                 return 4;  // error
   } 
   matchscan (cin) {
      case /[a-zA-Z_][a-zZ-A0-9_]*/: return 3;  // error
   }
}
 
